Added basic block view

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
 	"bjs_bipartite.ts",
 	"bjs_cola.ts",
 	"bjs_comatrix",
-	"bjs_hive.ts",
+	"bjs_blocks.ts",
+    "bjs_hive.ts",
 	"bjs_lineage.ts",
 	"bjs_tree.ts",
     "bjs_scatter.ts",
