Basic Solidatus API support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,16 +7,20 @@
         "sourceMap": true
     },
     "files": [
-	"bjs_bipartite.ts",
-	"bjs_cola.ts",
-	"bjs_comatrix",
-	"bjs_blocks.ts",
-    "bjs_hive.ts",
-	"bjs_lineage.ts",
-	"bjs_tree.ts",
-    "bjs_scatter.ts",
-    "bjs_stats.ts",
-    "bjs_data_gen.ts"
+      "bjs_bipartite.ts",
+      "bjs_data_inference.ts",
+      "bjs_data_csv.ts",
+      "bjs_data_solidatus.ts",
+      "bjs_data_json.ts",
+      "bjs_cola.ts",
+      "bjs_comatrix",
+      "bjs_blocks.ts",
+      "bjs_hive.ts",
+      "bjs_lineage.ts",
+      "bjs_tree.ts",
+      "bjs_scatter.ts",
+      "bjs_stats.ts",
+      "bjs_data_gen.ts"
     ]
 
 }
